<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_button"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:contentDescription="@string/search"
        app:showAsAction = "ifRoom"
        />

    <item
        android:id="@+id/filter_button"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filter"
        android:contentDescription="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_button"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        android:contentDescription="@string/add"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/edit_button"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit"
        android:contentDescription="@string/edit"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/delete_button"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete"
        android:contentDescription="@string/delete"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/cancel_button"
        android:icon="@drawable/ic_baseline_cancel_24"
        android:title="@string/cancel"
        android:contentDescription="@string/cancel"
        app:showAsAction="ifRoom"
        />

</menu>